5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1638_87.log
== TEST (2019-05-08 09:22:26) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = c
		else:
			m = b
			
print(m)
	
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:22:38) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = c
	else:
		m = b
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:22:53) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = c
	else:
		m = b
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:22:55) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = c
	else:
		m = b
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 09:24:12) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 09:24:26) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- EXECUTION TIME:
0.203671
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:55:00) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:55:18) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:55:31) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:55:44) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	m = a
else:
	if(b<c):
		m = b
	else:
		m = c
			
print(m)
	
-- EXECUTION TIME:
0.182036
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:56:49) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	print(a)
else:
	if(b<c):
		print(b)
	else:
		print(c)
			

	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:56:58) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	print(a)
else:
	if(b<c):
		print(b)
	else:
		print(c)
			

	
-- EXECUTION TIME:
0.177108
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 09:41:22) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	print(a)

elif(b<c):
	print(b)
else:
	print(c)
			

	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 09:41:34) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b):
	print(a)

elif(b<c):
	print(b)
else:
	print(c)
			

	
-- EXECUTION TIME:
0.181877
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:16:45) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b and a<c):
	print(a)

elif(b<c and b<a):
	print(b)
else:
	print(c)
			

	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:17:00) 
-- CODE:
a = int(input(""))
b= int(input(""))
c= int(input(""))



if(a<b and a<c):
	print(a)

elif(b<c and b<a):
	print(b)
else:
	print(c)
			

	
-- EXECUTION TIME:
0.165024
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
